MDXParser/MDXParser/MDXParser/mdxParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from mdx.g4 by ANTLR 4.7

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7")]
[System.CLSCompliant(false)]
public partial class mdxParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		QUOTE=1, ASTERISK=2, COLON=3, SEMICOLON=4, COMMA=5, CONCAT=6, DOT=7, EQ=8, 
		GE=9, GT=10, LBRACE=11, LE=12, LPAREN=13, LT=14, MINUS=15, NE=16, PLUS=17, 
		RBRACE=18, RPAREN=19, SOLIDUS=20, AND=21, AS=22, CASE=23, CELL=24, CELL_ORDINAL=25, 
		CREATE=26, DIMENSION=27, ELSE=28, EMPTY=29, END=30, FORMATTED_VALUE=31, 
		FROM=32, GLOBAL=33, MEMBER=34, NON=35, NOT=36, ON=37, OR=38, PROPERTIES=39, 
		SELECT=40, SESSION=41, SET=42, THEN=43, VALUE=44, WHEN=45, WHERE=46, XOR=47, 
		WITH=48, NUMBER=49, F=50, ID=51, AMP_QUOTED_ID=52, QUOTED_ID=53, STRING=54, 
		WS=55;
	public const int
		RULE_mdx_statement = 0, RULE_select_statement = 1, RULE_formula_specification = 2, 
		RULE_single_formula_specification = 3, RULE_set_specification = 4, RULE_member_specification = 5, 
		RULE_axis_specification_list = 6, RULE_member_property_def_list = 7, RULE_member_name = 8, 
		RULE_member_property_definition = 9, RULE_set_name = 10, RULE_compound_id = 11, 
		RULE_axis_specification = 12, RULE_axis_name = 13, RULE_dim_props = 14, 
		RULE_property_list = 15, RULE_property = 16, RULE_cube_specification = 17, 
		RULE_cube_name = 18, RULE_slicer_specification = 19, RULE_cell_props = 20, 
		RULE_cell_property_list = 21, RULE_cell_property = 22, RULE_mandatory_cell_property = 23, 
		RULE_provider_specific_cell_property = 24, RULE_expression = 25, RULE_value_expression = 26, 
		RULE_value_xor_expression = 27, RULE_value_or_expression = 28, RULE_term5 = 29, 
		RULE_term4 = 30, RULE_term3 = 31, RULE_term2 = 32, RULE_term = 33, RULE_factor = 34, 
		RULE_function = 35, RULE_value_expression_primary = 36, RULE_value_expression_primary0 = 37, 
		RULE_exp_list = 38, RULE_case_expression = 39, RULE_when_list = 40, RULE_when_clause = 41, 
		RULE_comp_op = 42, RULE_identifier = 43, RULE_unquoted_identifier = 44, 
		RULE_amp_quoted_identifier = 45, RULE_quoted_identifier = 46, RULE_keyword = 47;
	public static readonly string[] ruleNames = {
		"mdx_statement", "select_statement", "formula_specification", "single_formula_specification", 
		"set_specification", "member_specification", "axis_specification_list", 
		"member_property_def_list", "member_name", "member_property_definition", 
		"set_name", "compound_id", "axis_specification", "axis_name", "dim_props", 
		"property_list", "property", "cube_specification", "cube_name", "slicer_specification", 
		"cell_props", "cell_property_list", "cell_property", "mandatory_cell_property", 
		"provider_specific_cell_property", "expression", "value_expression", "value_xor_expression", 
		"value_or_expression", "term5", "term4", "term3", "term2", "term", "factor", 
		"function", "value_expression_primary", "value_expression_primary0", "exp_list", 
		"case_expression", "when_list", "when_clause", "comp_op", "identifier", 
		"unquoted_identifier", "amp_quoted_identifier", "quoted_identifier", "keyword"
	};

	private static readonly string[] _LiteralNames = {
		null, "'''", "'*'", "':'", "';'", "','", "'||'", "'.'", "'='", "'>='", 
		"'>'", "'{'", "'<='", "'('", "'<'", "'-'", "'<>'", "'+'", "'}'", "')'", 
		"'/'", "'AND'", "'AS'", "'CASE'", "'CELL'", "'CELL_ORDINAL'", "'CREATE'", 
		"'DIMENSION'", "'ELSE'", "'EMPTY'", "'END'", "'FORMATTED_VALUE'", "'FROM'", 
		"'GLOBAL'", "'MEMBER'", "'NON'", "'NOT'", "'ON'", "'OR'", "'PROPERTIES'", 
		"'SELECT'", "'SESSION'", "'SET'", "'THEN'", "'VALUE'", "'WHEN'", "'WHERE'", 
		"'XOR'", "'WITH'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "QUOTE", "ASTERISK", "COLON", "SEMICOLON", "COMMA", "CONCAT", "DOT", 
		"EQ", "GE", "GT", "LBRACE", "LE", "LPAREN", "LT", "MINUS", "NE", "PLUS", 
		"RBRACE", "RPAREN", "SOLIDUS", "AND", "AS", "CASE", "CELL", "CELL_ORDINAL", 
		"CREATE", "DIMENSION", "ELSE", "EMPTY", "END", "FORMATTED_VALUE", "FROM", 
		"GLOBAL", "MEMBER", "NON", "NOT", "ON", "OR", "PROPERTIES", "SELECT", 
		"SESSION", "SET", "THEN", "VALUE", "WHEN", "WHERE", "XOR", "WITH", "NUMBER", 
		"F", "ID", "AMP_QUOTED_ID", "QUOTED_ID", "STRING", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "mdx.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static mdxParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public mdxParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public mdxParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class Mdx_statementContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(mdxParser.Eof, 0); }
		public Select_statementContext select_statement() {
			return GetRuleContext<Select_statementContext>(0);
		}
		public Mdx_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mdx_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			ImdxListener typedListener = listener as ImdxListener;
			if (typedListener != null) typedListener.EnterMdx_statement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ImdxListener typedListener = listener as ImdxListener;
			if (typedListener != null) typedListener.ExitMdx_statement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImdxVisitor<TResult> typedVisitor = visitor as ImdxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMdx_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Mdx_statementContext mdx_statement() {
		Mdx_statementContext _localctx = new Mdx_statementContext(Context, State);
		EnterRule(_localctx, 0, RULE_mdx_statement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 96; select_statement();
			}
			State = 97; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Select_statementContext : ParserRuleContext {
		public ITerminalNode SELECT() { return GetToken(mdxParser.SELECT, 0); }
		public ITerminalNode FROM() { return GetToken(mdxParser.FROM, 0); }
		public Cube_specificationContext cube_specification() {
			return GetRuleContext<Cube_specificationContext>(0);
		}
		public ITerminalNode WITH() { return GetToken(mdxParser.WITH, 0); }
		public Formula_specificationContext formula_specification() {
			return GetRuleContext<Formula_specificationContext>(0);
		}
		public Axis_specification_listContext axis_specification_list() {
			return GetRuleContext<Axis_specification_listContext>(0);
		}
		public ITerminalNode WHERE() { return GetToken(mdxParser.WHERE, 0); }
		public Slicer_specificationContext slicer_specification() {
			return GetRuleContext<Slicer_specificationContext>(0);
		}
		public Cell_propsContext cell_props() {
			return GetRuleContext<Cell_propsContext>(0);
		}
		public Select_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_select_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			ImdxListener typedListener = listener as ImdxListener;
			if (typedListener != null) typedListener.EnterSelect_statement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ImdxListener typedListener = listener as ImdxListener;
			if (typedListener != null) typedListener.ExitSelect_statement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImdxVisitor<TResult> typedVisitor = visitor as ImdxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSelect_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Select_statementContext select_statement() {
		Select_statementContext _localctx = new Select_statementContext(Context, State);
		EnterRule(_localctx, 2, RULE_select_statement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WITH) {
				{
				State = 99; Match(WITH);
				State = 100; formula_specification();
				}
			}

			State = 103; Match(SELECT);
			State = 105;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LBRACE) | (1L << LPAREN) | (1L << MINUS) | (1L << PLUS) | (1L << CASE) | (1L << DIMENSION) | (1L << NON) | (1L << NOT) | (1L << PROPERTIES) | (1L << NUMBER) | (1L << ID) | (1L << QUOTED_ID) | (1L << STRING))) != 0)) {
				{
				State = 104; axis_specification_list();
				}
			}

			State = 107; Match(FROM);
			State = 108; cube_specification();
			State = 111;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WHERE) {
				{
				State = 109; Match(WHERE);
				State = 110; slicer_specification();
				}
			}

			State = 114;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==CELL || _la==PROPERTIES) {
				{
				State = 113; cell_props();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Formula_specificationContext : ParserRuleContext {
		public Single_formula_specificationContext[] single_formula_specification() {
			return GetRuleContexts<Single_formula_specificationContext>();
		}
		public Single_formula_specificationContext single_formula_specification(int i) {
			return GetRuleContext<Single_formula_specificationContext>(i);
		}
		public Formula_specificationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_formula_specification; } }
		public override void EnterRule(IParseTreeListener listener) {
			ImdxListener typedListener = listener as ImdxListener;
			if (typedListener != null) typedListener.EnterFormula_specification(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ImdxListener typedListener = listener as ImdxListener;
			if (typedListener != null) typedListener.ExitFormula_specification(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImdxVisitor<TResult> typedVisitor = visitor as ImdxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFormula_specification(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Formula_specificationContext formula_specification() {
		Formula_specificationContext _localctx = new Formula_specificationContext(Context, State);
		EnterRule(_localctx, 4, RULE_formula_specification);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 117;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 116; single_formula_specification();
				}
				}
				State = 119;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==MEMBER || _la==SET );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Single_formula_specificationContext : ParserRuleContext {
		public Member_specificationContext member_specification() {
			return GetRuleContext<Member_specificationContext>(0);
		}
		public Set_specificationContext set_specification() {
			return GetRuleContext<Set_specificationContext>(0);
		}
		public Single_formula_specificationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_single_formula_specification; } }
		public override void EnterRule(IParseTreeListener listener) {
			ImdxListener typedListener = listener as ImdxListener;
			if (typedListener != null) typedListener.EnterSingle_formula_specification(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ImdxListener typedListener = listener as ImdxListener;
			if (typedListener != null) typedListener.ExitSingle_formula_specification(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImdxVisitor<TResult> typedVisitor = visitor as ImdxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSingle_formula_specification(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Single_formula_specificationContext single_formula_specification() {
		Single_formula_specificationContext _localctx = new Single_formula_specificationContext(Context, State);
		EnterRule(_localctx, 6, RULE_single_formula_specification);
		try {
			State = 123;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case MEMBER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 121; member_specification();
				}
				break;
			case SET:
				EnterOuterAlt(_localctx, 2);
				{
				State = 122; set_specification();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Set_specificationContext : ParserRuleContext {
		public ITerminalNode SET() { return GetToken(mdxParser.SET, 0); }
		public Set_nameContext set_name() {
			return GetRuleContext<Set_nameContext>(0);
		}
		public ITerminalNode AS() { return GetToken(mdxParser.AS, 0); }
		public ITerminalNode[] QUOTE() { return GetTokens(mdxParser.QUOTE); }
		public ITerminalNode QUOTE(int i) {
			return GetToken(mdxParser.QUOTE, i);
		}
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public Set_specificationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_set_specification; } }
		public override void EnterRule(IParseTreeListener listener) {
			ImdxListener typedListener = listener as ImdxListener;
			if (typedListener != null) typedListener.EnterSet_specification(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ImdxListener typedListener = listener as ImdxListener;
			if (typedListener != null) typedListener.ExitSet_specification(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImdxVisitor<TResult> typedVisitor = visitor as ImdxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSet_specification(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Set_specificationContext set_specification() {
		Set_specificationContext _localctx = new Set_specificationContext(Context, State);
		EnterRule(_localctx, 8, RULE_set_specification);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 125; Match(SET);
			State = 126; set_name();
			State = 127; Match(AS);
			State = 133;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case QUOTE:
				{
				State = 128; Match(QUOTE);
				State = 129; expression();
				State = 130; Match(QUOTE);
				}
				break;
			case LBRACE:
			case LPAREN:
			case MINUS:
			case PLUS:
			case CASE:
			case DIMENSION:
			case NOT:
			case PROPERTIES:
			case NUMBER:
			case ID:
			case QUOTED_ID:
			case STRING:
				{
				State = 132; expression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Member_specificationContext : ParserRuleContext {
		public ITerminalNode MEMBER() { return GetToken(mdxParser.MEMBER, 0); }
		public Member_nameContext member_name() {
			return GetRuleContext<Member_nameContext>(0);
		}
		public ITerminalNode AS() { return GetToken(mdxParser.AS, 0); }
		public ITerminalNode COMMA() { return GetToken(mdxParser.COMMA, 0); }
		public ITerminalNode[] QUOTE() { return GetTokens(mdxParser.QUOTE); }
		public ITerminalNode QUOTE(int i) {
			return GetToken(mdxParser.QUOTE, i);
		}
		public Value_expressionContext value_expression() {
			return GetRuleContext<Value_expressionContext>(0);
		}
		public Member_property_def_listContext member_property_def_list() {
			return GetRuleContext<Member_property_def_listContext>(0);
		}
		public Member_specificationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_member_specification; } }
		public override void EnterRule(IParseTreeListener listener) {
			ImdxListener typedListener = listener as ImdxListener;
			if (typedListener != null) typedListener.EnterMember_specification(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ImdxListener typedListener = listener as ImdxListener;
			if (typedListener != null) typedListener.ExitMember_specification(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImdxVisitor<TResult> typedVisitor = visitor as ImdxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMember_specification(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Member_specificationContext member_specification() {
		Member_specificationContext _localctx = new Member_specificationContext(Context, State);
		EnterRule(_localctx, 10, RULE_member_specification);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 135; Match(MEMBER);
			State = 136; member_name();
			State = 137; Match(AS);
			{
			State = 143;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case QUOTE:
				{
				State = 138; Match(QUOTE);
				State = 139; value_expression();
				State = 140; Match(QUOTE);
				}
				break;
			case LBRACE:
			case LPAREN:
			case MINUS:
			case PLUS:
			case CASE:
			case DIMENSION:
			case NOT:
			case PROPERTIES:
			case NUMBER:
			case ID:
			case QUOTED_ID:
			case STRING:
				{
				State = 142; value_expression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 145; Match(COMMA);
			State = 147;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DIMENSION) | (1L << PROPERTIES) | (1L << ID) | (1L << QUOTED_ID))) != 0)) {
				{
				State = 146; member_property_def_list();
				}
			}

			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Axis_specification_listContext : ParserRuleContext {
		public Axis_specificationContext[] axis_specification() {
			return GetRuleContexts<Axis_specificationContext>();
		}
		public Axis_specificationContext axis_specification(int i) {
			return GetRuleContext<Axis_specificationContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(mdxParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(mdxParser.COMMA, i);
		}
		public Axis_specification_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_axis_specification_list; } }
		public override void EnterRule(IParseTreeListener listener) {
			ImdxListener typedListener = listener as ImdxListener;
			if (typedListener != null) typedListener.EnterAxis_specification_list(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ImdxListener typedListener = listener as ImdxListener;
			if (typedListener != null) typedListener.ExitAxis_specification_list(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImdxVisitor<TResult> typedVisitor = visitor as ImdxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAxis_specification_list(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Axis_specification_listContext axis_specification_list() {
		Axis_specification_listContext _localctx = new Axis_specification_listContext(Context, State);
		EnterRule(_localctx, 12, RULE_axis_specification_list);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 149; axis_specification();
			State = 154;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 150; Match(COMMA);
				State = 151; axis_specification();
				}
				}
				State = 156;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Member_property_def_listContext : ParserRuleContext {
		public Member_property_definitionContext[] member_property_definition() {
			return GetRuleContexts<Member_property_definitionContext>();
		}
		public Member_property_definitionContext member_property_definition(int i) {
			return GetRuleContext<Member_property_definitionContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(mdxParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(mdxParser.COMMA, i);
		}
		public Member_property_def_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_member_property_def_list; } }
		public override void EnterRule(IParseTreeListener listener) {
			ImdxListener typedListener = listener as ImdxListener;
			if (typedListener != null) typedListener.EnterMember_property_def_list(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ImdxListener typedListener = listener as ImdxListener;
			if (typedListener != null) typedListener.ExitMember_property_def_list(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImdxVisitor<TResult> typedVisitor = visitor as ImdxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMember_property_def_list(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Member_property_def_listContext member_property_def_list() {
		Member_property_def_listContext _localctx = new Member_property_def_listContext(Context, State);
		EnterRule(_localctx, 14, RULE_member_property_def_list);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 157; member_property_definition();
			State = 162;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 158; Match(COMMA);
				State = 159; member_property_definition();
				}
				}
				State = 164;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Member_nameContext : ParserRuleContext {
		public Compound_idContext compound_id() {
			return GetRuleContext<Compound_idContext>(0);
		}
		public Member_nameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_member_name; } }
		public override void EnterRule(IParseTreeListener listener) {
			ImdxListener typedListener = listener as ImdxListener;
			if (typedListener != null) typedListener.EnterMember_name(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ImdxListener typedListener = listener as ImdxListener;
			if (typedListener != null) typedListener.ExitMember_name(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImdxVisitor<TResult> typedVisitor = visitor as ImdxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMember_name(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Member_nameContext member_name() {
		Member_nameContext _localctx = new Member_nameContext(Context, State);
		EnterRule(_localctx, 16, RULE_member_name);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 165; compound_id();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Member_property_definitionContext : ParserRuleContext {
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode EQ() { return GetToken(mdxParser.EQ, 0); }
		public Value_expressionContext value_expression() {
			return GetRuleContext<Value_expressionContext>(0);
		}
		public Member_property_definitionContext(ParserRuleContext parent, int invokingState)
